[package]
name = "gojsonnet"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gojsonnet-sys = ">= 1.0.0-alpha.2"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
